bindings/lisp/fae/set.lisp

(in-package :cl-user)
(define-foreign-type set-type () () (:actual-type :pointer))
(define-parse-method set () (make-instance 'set-type))
(defclass set () ((set-ptr :initarg :set-ptr)))
(defmethod translate-to-foreign (x (type set-type)) (slot-value x 'set-ptr))
(defmethod translate-from-foreign (x (type set-type)) (make-instance 'set :set-ptr x))
(defcfun (set-empty "fae_set_empty") set)
(defcfun (set-single "fae_set_single") set (a ptr))
(defcfun (set-add "fae_set_add") set (a ptr) (b set))
(defcfun (set-set "fae_set_set") set (a ptr) (b set))
(defcfun (set-remove "fae_set_remove") set (a ptr) (b set))
(defcfun (set-dadd "fae_set_dadd") set (a ptr) (b set))
(defcfun (set-dset "fae_set_dset") set (a ptr) (b set))
(defcfun (set-dremove "fae_set_dremove") set (a ptr) (b set))
(defcfun (set-copy "fae_set_copy") set (a set))
(defcfun (set-destroy "fae_set_destroy") :void (a set))
(defcfun (set-size "fae_set_size") :int (a set))
(defcfun (set-is-empty "fae_set_is_empty") :boolean (a set))
(defcfun (set-is-single "fae_set_is_single") :boolean (a set))
(defcfun (set-has "fae_set_has") :boolean (a ptr) (b set))
(defcfun (set-get "fae_set_get") ptr (a ptr) (b set))
(defcfun (set-is-subset-of "fae_set_is_subset_of") :boolean (a set) (b set))
(defcfun (set-is-proper-subset-of "fae_set_is_proper_subset_of") :boolean (a set) (b set))
(defcfun (set-sum "fae_set_sum") set (a set) (b set))
(defcfun (set-intersection "fae_set_intersection") set (a set) (b set))
(defcfun (set-difference "fae_set_difference") set (a set) (b set))
(defcfun (set-product "fae_set_product") set (a set) (b set))
(defcfun (set-power "fae_set_power") set (a set))
(defcfun (set-from-list "fae_set_from_list") set (a list))
(defcfun (set-to-list "fae_set_to_list") list (a set))